--- a/doc/antora/modules/raddb/pages/sites-available/tls.adoc
+++ b/doc/antora/modules/raddb/pages/sites-available/tls.adoc
@@ -111,6 +111,10 @@ Accept an expired Certificate Revocation List
 
 allow_expired_crl = no
 
+Accept a not-yet-valid Certificate Revocation List
+
+allow_not_yet_valid_crl = no
+
 
 If check_cert_issuer is set, the value will
 be checked against the DN of the issuer in
