note recent changes

--- a/doc/ChangeLog
+++ b/doc/ChangeLog
@@ -16,7 +16,9 @@ FreeRADIUS 3.0.24 Thu 10 Jun 2021 12:00:00 EDT urgency=low
 	  be loaded from "realm_dir" in the "tls" section.  SNI will be
 	  cached in the TLS-Server-Name-Indication attribute.
 	* Preliminary support for haproxy "PROXY" protocol.
-	  See sites-available/tls, "proxy_protocol".
+	  See sites-available/tls, "proxy_protocol" and doc/antora/modules/howto/pages/protocols/proxy/
+	* Generate parse errors in more circumstances when we know that the
+	  configuration is wrong.
 
 	Bug fixes
 	* Fix crash in trustrouter module (#4115). Patch from Alejandro Perez
@@ -35,6 +37,8 @@ FreeRADIUS 3.0.24 Thu 10 Jun 2021 12:00:00 EDT urgency=low
 	  Fixes #4161, #4162, #4163.
 	* Final fix for double free in #3188.
 	* Fix sqlcounter wrong memory free. PR #4192 from Jorge Pereira
+	* Accept slow writes from proxies over TCP, which allows the
+	  server to make more progress when it receives partial packets.
 
 FreeRADIUS 3.0.23 Thu 10 Jun 2021 12:00:00 EDT urgency=low
 	Feature improvements
